Page 2 ajout des élus

--- a/commune.html
+++ b/commune.html
@@ -12,9 +12,9 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="image/logo_morlaix-coupe.png">
+    <link rel="shortcut icon" href="image/logo_morlaix.png">
     <title>Morlaix Communauté</title>
-    <link rel="Icon" href="image/logo_morlaix-coupe.png"/>
+    <!--<link rel="Icon" href="image/logo_morlaix-coupe.png"/>-->
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -75,6 +75,14 @@
 
 <div class="custom-image-container">
     <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+    <h1> <span class="ityped"></span></h1>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript">
+        window.ityped.init(document.querySelector('.ityped'),{
+            strings :['Bienvenue','Sur La Commune','De Plougonven'],
+            loop : true
+        })
+    </script>
 </div>
 
 <div class="container mt-4 space-after ">
@@ -161,18 +169,22 @@
                                 </div>
                                 <div class="contact-item">
                                     <a href="http://www.plougonven.fr/">
-                                        <ion-icon name="globe"></ion-icon>
+                                        <ion-icon name="time-outline"></ion-icon>
                                         <div class="box">
                                             <a class="button" href="#popup1">Horaires</a>
                                         </div>
 
                                         <div id="popup1" class="overlay">
                                             <div class="popup">
-                                                <h2>Here i am</h2>
+                                                <h2>Horaire</h2>
                                                 <a class="close" href="#">&times;</a>
                                                 <div class="content">
-                                                    Thank to pop me out of that button, but now i'm done so you can
-                                                    close this window.
+                                                    <h3>Du lundi au jeudi : 9h - 12h et 14h - 17 h
+                                                    <br>Vendredi : 13h30 - 16h30
+                                                    <br>Samedi : 9h - 11h45
+                                                    <BR>Dimanche : Fermé
+                                                    </h3>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -201,7 +213,7 @@
                 ></script>
                 <script src="js/Contcart.js"></script>
             </div>
-            <p>fevhbjnsklm</p>
+            <p>Les Ilus</p>
 
 
             <div class="wrapperauto">
@@ -222,7 +234,7 @@
                             <div class="back">
                                 <div class="back-content">
                                     <h2>-Commission :
-                                        - Transition écologique et énergétique</h2>
+                                        <br>- Transition écologique et énergétique</h2>
 
                                 </div>
                             </div>
@@ -242,7 +254,7 @@
                                 <div class="back-content">
                                     <h2>-Conseiller Communautaire
                                         <br>-Commission :
-                                        <br>*Économie; Tourisme; Commerce</h2>
+                                        <br>-Économie; Tourisme; Commerce</h2>
 
                                 </div>
                             </div>
@@ -264,7 +276,7 @@
                                 <div class="back-content">
                                     <h2>
                                         Commission :
-                                        - Aménagement – Habitat – Mobilités - Mer et Littoral</h2>
+                                        <br>- Aménagement – Habitat – Mobilités - Mer et Littoral</h2>
 
                                 </div>
                             </div>
@@ -284,7 +296,7 @@
                             <div class="back">
                                 <div class="back-content">
                                     <h2>-Commission :
-                                        - Culture - Quartier de la manufacture</h2>
+                                        <br>- Culture ; Quartier de la manufacture</h2>
 
                                 </div>
                             </div>
@@ -305,7 +317,7 @@
                             <div class="back">
                                 <div class="back-content">
                                     <h2>Commission :
-                                        - Cohésion sociale – Jeunesse – Liens inter-générationnels</h2>
+                                        <br>- Cohésion sociale – Jeunesse – Liens inter-générationnels</h2>
 
                                 </div>
                             </div>
@@ -326,7 +338,7 @@
                             <div class="back">
                                 <div class="back-content">
                                     <h2>-Commission :
-                                        - Transition écologique et énergétique</h2>
+                                        <br>- Transition écologique et énergétique</h2>
 
                                 </div>
                             </div>
@@ -351,7 +363,7 @@
                                 <div class="back-content">
                                     <div class="int">
                                         <h2>-Commission :
-                                            - Eau - Biodiversité</h2>
+                                            <br>- Eau - Biodiversité</h2>
                                     </div>
 
                                 </div>
@@ -370,7 +382,7 @@
                 </ul>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
-            <p>fevhbjnsklm</p>
+            <p>La carte des communes:</p>
             <div class="row">
                 <div class="col-sm-8">
                     <div class="mapdiv">
@@ -618,7 +630,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse show"
                              data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <p><a><strong>Plougonven est une charmante commune située dans la région de
+                                <!--<p><a><strong>Plougonven est une charmante commune située dans la région de
                                     Bretagne,</strong>
                                     en
                                     France. Nichée au cœur du département du Finistère, cette ville pittoresque
@@ -643,6 +655,17 @@
                                         <u><br>Lire moins</u>
                                     </a>
 
+                                </p>-->
+                                <p>
+                                    <strong>Plougonven est une charmante commune située dans la région de Bretagne,</strong>
+                                    en France. Nichée au cœur du département du Finistère, cette ville pittoresque bénéficie d'une localisation exceptionnelle, entourée par les doux vallons de la campagne bretonne. Plougonven est réputée pour son riche héritage historique, remontant à des siècles passés, avec son église paroissiale du XVIe siècle, classée monument historique, qui constitue un exemple impressionnant de l'architecture gothique.
+                                </p>
+                                <a id="lireplus" href="#nogo" onclick="afficherLireLaSuite();">Lire la suite...</a>
+                                <p id="lirelasuite">
+                                    Les rues pavées et les maisons en pierre traditionnelles ajoutent au charme unique de la ville, offrant aux visiteurs une véritable expérience immersive dans l'histoire de la Bretagne.
+                                    <a href="javascript:masquerLireLaSuite();">
+                                        <u><br><ion-icon name="remove"></ion-icon></u>
+                                    </a>
                                 </p>
 
                             </div>
@@ -744,4 +767,20 @@
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<style>
+    #lirelasuite {
+        display: none;
+    }
+</style>
+<script>
+    function afficherLireLaSuite() {
+        document.getElementById('lirelasuite').style.display = 'block';
+        document.getElementById('lireplus').style.display = 'none';
+    }
+
+    function masquerLireLaSuite() {
+        document.getElementById('lirelasuite').style.display = 'none';
+        document.getElementById('lireplus').style.display = 'block';
+    }
+</script>
 </html>
