--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -55,7 +55,7 @@
             <script type="text/javascript" src="js/app.js"></script>
             <script type="text/javascript">
                 window.ityped.init(document.querySelector('.ityped'),{
-                    strings :['Bienvenidos','Les Saluda'],
+                    strings :['Explorez ','Nos Lieux ','Touristiques'],
                     loop : true
                 })
             </script>
