--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -54,6 +54,14 @@
 
     <div class="custom-image-container">
         <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+        <h1> <span class="ityped"></span></h1>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript">
+            window.ityped.init(document.querySelector('.ityped'),{
+                strings :['Bienvenidos','Les Saluda'],
+                loop : true
+            })
+        </script>
     </div>
 
     <div class="container mt-4 space-after ">
