--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="author" content="Damien Eloïse Lucas Samy">
       <!-- Pour adapter sur téléphone -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Accueil</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
+      <title>Accueil</title><link rel="shortcut icon" href="image/logo_morlaix-coupe.png" type="image/vnd.microsoft.icon" />
       <script type="text/javascript" src="js/bootstrap.js"></script>
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
@@ -51,6 +51,15 @@
 
       <div class="custom-image-container">
          <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+         <!--<video autoplay="autoplay" muted="" loop="infinite" src="Enregistrement%20de%20l’écran%202023-10-17%20à%2015.11.00.mov"></video>-->
+         <h1> <span class="ityped"></span></h1>
+         <script type="text/javascript" src="js/app.js"></script>
+         <script type="text/javascript">
+            window.ityped.init(document.querySelector('.ityped'),{
+               strings :['Bienvenue ','Sur Notre Site ','Morlaix'],
+               loop : true
+            })
+         </script>
       </div>
 
       <div class="container mt-4 space-after ">
