--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -58,7 +58,7 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript">
             window.ityped.init(document.querySelector('.ityped'),{
-                strings :['Bienvenidos','Les Saluda'],
+                strings :['Faites ','Vos Démarches ','En Ligne'],
                 loop : true
             })
         </script>
