--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -11,12 +11,18 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
+        <script rel="text/javascript" src="js/script.js" defer></script>
+        <link rel="text/javascript" href="js/script.js">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     </head>
 
     <body>
+
+    <div class="btnhaut">
+        <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
+    </div>
+
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-green">
