--- a/commune.html
+++ b/commune.html
@@ -29,6 +29,7 @@
             integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
             crossorigin=""
     />
+    <script rel="text/javascript" src="js/script.js" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fontawesome Link for Icons -->
@@ -37,6 +38,9 @@
 </head>
 
 <body>
+<div class="btnhaut">
+    <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
+</div>
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-green">
