Amélioration page Acceuil

--- a/commune.html
+++ b/commune.html
@@ -12,8 +12,8 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="image/logo_morlaix.png">
-    <title>Morlaix Communauté</title>
+
+    <title>Morlaix Communauté</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
     <!--<link rel="Icon" href="image/logo_morlaix-coupe.png"/>-->
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
