--- a/commune.html
+++ b/commune.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <script rel="text/javascript" src="js/btn.js" defer></script>
     <title>Morlaix Communauté</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
     <!--<link rel="Icon" href="image/logo_morlaix-coupe.png"/>-->
     <script type="text/javascript" src="js/bootstrap.js"></script>
@@ -29,7 +29,7 @@
             integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
             crossorigin=""
     />
-    <script rel="text/javascript" src="js/script.js" defer></script>
+    <!--<script rel="text/javascript" src="js/script.js" defer></script>-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fontawesome Link for Icons -->
