--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -12,9 +12,13 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/Ltouristique.css">
+        <script rel="text/javascript" src="js/btn.js" defer></script>
     </head>
 
     <body>
+    <div class="btnhaut">
+        <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
+    </div>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-green">
                 <div class="container">
