--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
       <script type="text/javascript" src="js/bootstrap.js"></script>
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
+      <script rel="text/javascript" src="js/btn.js" defer></script>
    </head>
 
    <body>
+   <div class="btnhaut">
+      <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
+   </div>
 
       <header>
+
          <nav class="navbar navbar-expand-lg navbar-light bg-green">
             <div class="container">
                <a class="navbar-brand" href="index.html">
