Amélioration page d'acceuil

--- a/commune.html
+++ b/commune.html
@@ -7,8 +7,7 @@
     <meta name="author" content="Damien Eloïse Lucas Samy">
     <!-- Pour adapter sur téléphone -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commune</title>
-    <link rel="Icon" href="image/logo_morlaix-coupe.png"/>
+    <title>Commune</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -23,14 +22,8 @@
     <link rel="stylesheet" href="css/carte.css">
     <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/Map.css">
-    <link
-            rel="stylesheet"
-            href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-            crossorigin=""
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <!--<script rel="text/javascript" src="js/script.js" defer></script>-->
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fontawesome Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -38,6 +31,7 @@
 </head>
 
 <body>
+
 <div class="btnhaut">
     <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
 </div>
