Changement page commune

--- a/commune.html
+++ b/commune.html
@@ -211,7 +211,7 @@
                 ></script>
                 <script src="js/Contcart.js"></script>
             </div>
-            <p>Les Ilus</p>
+            <p>Les Elu·e·s</p>
 
 
             <div class="wrapperauto">
