--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       </header>
 
       <div class="custom-image-container">
-         <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+         <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
+            <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
+         </video>
          <!--<video autoplay="autoplay" muted="" loop="infinite" src="Enregistrement%20de%20l’écran%202023-10-17%20à%2015.11.00.mov"></video>-->
          <h1> <span class="ityped"></span></h1>
          <script type="text/javascript" src="js/app.js"></script>
