--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -54,7 +54,10 @@
         </header>
 
         <div class="custom-image-container">
-            <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+            <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
+                <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
+            </video>
+
             <h1> <span class="ityped"></span></h1>
             <script type="text/javascript" src="js/app.js"></script>
             <script type="text/javascript">
