Amélioration du site

--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -270,7 +270,7 @@
             </ul>
             <ul class="menu">
                 <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
-                <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire de contact</a></li>
+                <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038" target="_blank">Formulaire de contact</a></li>
                 <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
             </ul>
             <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
