--- a/commune.html
+++ b/commune.html
@@ -737,30 +737,22 @@
             <div class="wave" id="wave4"></div>
         </div>
         <ul class="social-icon">
-            <li class="social-icon__item"><a class="social-icon__link"
-                                             href="https://consent.youtube.com/m?continue=https%3A%2F%2Fwww.youtube.com%2Fuser%2FmorlaixFR%2Ffeed%3Fcbrd%3D1&gl=FR&m=0&pc=yt&cm=2&hl=fr&src=1"
-                                             target="blank">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://consent.youtube.com/m?continue=https%3A%2F%2Fwww.youtube.com%2Fuser%2FmorlaixFR%2Ffeed%3Fcbrd%3D1&gl=FR&m=0&pc=yt&cm=2&hl=fr&src=1" target="blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a></li>
-            <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/Morlaix_Attract"
-                                             target="blank">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/Morlaix_Attract" target="blank">
                 <ion-icon name="logo-twitter"></ion-icon>
             </a></li>
-            <li class="social-icon__item"><a class="social-icon__link"
-                                             href="https://www.linkedin.com/company/morlaix-attractivite/"
-                                             target="blank">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/company/morlaix-attractivite/" target="blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a></li>
-            <li class="social-icon__item"><a class="social-icon__link"
-                                             href="https://www.facebook.com/MorlaixCommunauteOfficiel/" target="blank">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/MorlaixCommunauteOfficiel/" target="blank">
                 <ion-icon name="logo-facebook"></ion-icon>
             </a></li>
         </ul>
         <ul class="menu">
             <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
-            <li class="menu__item"><a class="menu__link"
-                                      href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire
-                de contact</a></li>
+            <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038" target="_blank">Formulaire de contact</a></li>
             <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
         </ul>
         <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
