Amélioration du header

--- a/commune.html
+++ b/commune.html
@@ -116,7 +116,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="#" class="card-link">
-                    <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
+                    <img src="image/icones/Bus.png" class="logo-card" alt="Logo Mobilité">
                     <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
                 </a>
             </div>
@@ -132,7 +132,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="Ltouristique.html" class="card-link" target="_blank">
-                    <img src="image/icones/Logo_lieux_Touristiques.png" class="logo-card" alt="Logo Sport">
+                    <img src="image/icones/carte.png" class="logo-card" alt="Logo Sport">
                     <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                 </a>
             </div>
