Amélioration du header

--- a/commune.html
+++ b/commune.html
@@ -92,7 +92,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="#" class="card-link">
-                    <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
+                    <img src="image/icones/temple.png" class="logo-card" alt="Logo Batiment Publique">
                     <p class="font-weight-bold">COMMANDE PUBLIQUE</p>
                 </a>
             </div>
@@ -100,7 +100,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="#" class="card-link">
-                    <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
+                    <img src="image/icones/mallette.png" class="logo-card" alt="Logo  Valise">
                     <p class="font-weight-bold">EMPLOI</p>
                 </a>
             </div>
@@ -108,7 +108,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="Service en ligne.html" class="card-link" target="_blank">
-                    <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
+                    <img src="image/icones/service.png" class="logo-card" alt="Logo Associations">
                     <p class="font-weight-bold">SERVICES EN LIGNE</p>
                 </a>
             </div>
@@ -124,7 +124,7 @@
         <div class="col-md-2">
             <div class="card-style">
                 <a href="#" class="card-link">
-                    <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
+                    <img src="image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
                     <p class="font-weight-bold">TRAVAUX</p>
                 </a>
             </div>
