--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -77,7 +77,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="#" class="card-link">
-                        <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
+                        <img src="image/icones/temple.png" class="logo-card" alt="Logo Batiment Publique">
                         <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
                     </a>
                 </div>
@@ -85,7 +85,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="#" class="card-link">
-                        <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
+                        <img src="image/icones/mallette.png" class="logo-card" alt="Logo  Valise">
                         <p class="font-weight-bold">EMPLOI</p>
                     </a>
                 </div>
@@ -93,7 +93,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="Service en ligne.html" class="card-link" target="_blank">
-                        <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
+                        <img src="image/icones/service.png" class="logo-card" alt="Logo Associations">
                         <p class="font-weight-bold">SERVICES EN LIGNE</p>
                     </a>
                 </div>
@@ -101,7 +101,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="#" class="card-link">
-                        <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
+                        <img src="image/icones/Bus.png" class="logo-card" alt="Logo Mobilité">
                         <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
                     </a>
                 </div>
@@ -109,7 +109,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="#" class="card-link">
-                        <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
+                        <img src="image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
                         <p class="font-weight-bold">TRAVAUX</p>
                     </a>
                 </div>
@@ -117,7 +117,7 @@
             <div class="col-md-2">
                 <div class="card-style">
                     <a href="Ltouristique.html" class="card-link" target="_blank">
-                        <img src="image/icones/Logo_lieux_Touristiques.png" class="logo-card" alt="Logo Sport">
+                        <img src="image/icones/carte.png" class="logo-card" alt="Logo Sport">
                         <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                     </a>
                 </div>
