--- a/commune.html
+++ b/commune.html
@@ -63,8 +63,10 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                    <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
+                    <input class="form-control me-2" type="search" id="search" placeholder="Rechercher"
+                           onchange="ouvrirPage()" aria-label="Search">
+                    <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
+                           onclick="ouvrirPage()" value="Chercher">
                 </form>
             </div>
         </div>
@@ -72,9 +74,9 @@
 </header>
 
 <div class="custom-image-container">
-    <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
+    <!--<video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
-    </video>
+    </video>-->
 
     <h1> <span class="ityped"></span></h1>
     <script type="text/javascript" src="js/app.js"></script>
@@ -610,7 +612,7 @@
                         </circle>
                         <circle cx="149.2" cy="439.8" id="2">
                         </circle>
-                        </svg>
+
 
                     </div>
                 </div>
