Amélioration des pages

--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -66,9 +66,9 @@
 </header>
 
 <div class="custom-image-container">
-    <!--<video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
+    <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
-    </video>-->
+    </video>
 
     <h1><span class="ityped"></span></h1>
     <script type="text/javascript" src="js/app.js"></script>
