Amélioration des pages

--- a/commune.html
+++ b/commune.html
@@ -33,14 +33,14 @@
 <body>
 
 <div class="btnhaut">
-    <img src="image/icones/arrow-up-solid.svg" class="iconeHaut">
+    <img src="image/icones/arrow-up-solid.svg" class="iconeHaut" alt="Remonter en haut de la page">
 </div>
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-green">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
+                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la communauté">
                 <span class="text-white ml-2">Morlaix Communauté</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,7 +74,7 @@
 </header>
 
 <div class="custom-image-container">
-    <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="infinite">
+    <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="loop">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
     </video>
 
