--- a/erreur.html
+++ b/erreur.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-green">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
+                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la communauté">
                 <span class="text-white ml-2">Morlaix Communauté</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
