Correction des fautes d'orthographe

--- a/commune.html
+++ b/commune.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav text-center">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">La Communautée</a>
+                        <a class="nav-link text-white" href="#">La Communauté</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Domaines d'actions</a>
