--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav text-center">
                      <li class="nav-item">
-                        <a class="nav-link text-white" href="#">La Communautée</a>
+                        <a class="nav-link text-white" href="#">La Communauté</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link text-white" href="#">Domaines d'actions</a>
@@ -390,7 +390,6 @@
                               transform="matrix(1.6434,0,0,1.6434,0,8.2757)"
                               style="stroke-linejoin: round; stroke-opacity: 1; cursor: pointer;"></path>
                      </a>
-
                   </svg>
 
                   <circle cx="302.6" cy="1147.4" id="0"></circle>
