Suppréssions des érreurs du code

--- a/erreur.html
+++ b/erreur.html
@@ -1,80 +1,75 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Site de la communauté de Morlaix">
-    <meta name="author" content="Damien Eloïse Lucas Samy">
-    <!-- Pour adapter sur téléphone -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lieux Touristiques</title>
-    <link rel="Icon" href="image/logo_morlaix-coupe.png"/>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Ltouristique.css">
-    <link rel="stylesheet" href="css/Erreur.css">
-    <script rel="text/javascript" src="js/btn.js" defer></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Site de la communauté de Morlaix">
+        <meta name="author" content="Damien Eloïse Lucas Samy">
+        <!-- Pour adapter sur téléphone -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Erreur</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/Ltouristique.css">
+        <link rel="stylesheet" href="css/Erreur.css">
+        <script rel="text/javascript" src="js/btn.js" defer></script>
+    </head>
 
-<body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-green">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la communauté">
-                <span class="text-white ml-2">Morlaix Communauté</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav text-center">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">La Communauté</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Domaines d'actions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les grands projets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les équipements</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <!--<input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                    <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
-                    <input type="search" id="search" value="" onchange="ouvrirPage()">
-                    <input type="button" id="button" onclick="ouvrirPage()" value="Chercher">
-          -->
+    <body>
 
-                    <input class="form-control me-2" type="search" id="search" placeholder="Rechercher"
-                           onchange="ouvrirPage()" aria-label="Search">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-green">
+                <div class="container">
+                    <a class="navbar-brand" href="index.html">
+                        <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la communauté">
+                        <span class="text-white ml-2">Morlaix Communauté</span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav text-center">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">La Communauté</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Domaines d'actions</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Les grands projets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Les équipements</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <!--<input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                            <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
+                            <input type="search" id="search" value="" onchange="ouvrirPage()">
+                            <input type="button" id="button" onclick="ouvrirPage()" value="Chercher">
+                  -->
 
-                    <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
-                           onclick="ouvrirPage()" value="Chercher">
+                            <input class="form-control me-2" type="search" id="search" placeholder="Rechercher"
+                                   onchange="ouvrirPage()" aria-label="Search">
 
-                </form>
-            </div>
+                            <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
+                                   onclick="ouvrirPage()" value="Chercher">
+
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <div class="erreur">
+            <h2>Oops! La page n'a pas été trouvé</h2>
+            <h1>404</h1>
+            <a href="index.html">Retourner à la page d'Accueil</a>
         </div>
-    </nav>
-</header>
-<div class="erreur">
-    <h2>Oops! La page n'a pas été trouver</h2>
-    <h1>404</h1>
-    <p>On n'a pas </p>
-    <a href="#">Retrouver la page Home</a>
 
-</div>
-
-
-</body>
-
-
+    </body>
 <!--Damien : Footer-->
-
 </html>
 
