Amélioration page commune.html

--- a/commune.html
+++ b/commune.html
@@ -222,43 +222,36 @@
             <div class="wrapperauto">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <ul class="carouselauto">
+
                     <div class="container-3d">
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-
-                                    <div class="img"><img src="image/personne/Bernadette-Auffret.jpg" alt="img"
-                                                          draggable="false"></div>
-                                    <h2>Mme Auffret </h2>
+                                    <div class="img"><img src="image/personne/Bernadette-Auffret.jpg" alt="img" draggable="false"></div>
+                                    <h2>Mme AUFFRET </h2>
                                     <span>Maire de Plougonven</span>
-
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>-Commission :
-                                        <br>- Transition écologique et énergétique</h2>
-
+                                    <h2>Commission : <br>• Ressources</h2>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="container-3d">
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/Jean-Laurent-Hamon.jpg" alt="img"
-                                                          draggable="false"></div>
-                                    <h2>MR Hamon</h2>
+                                    <div class="img"><img src="image/personne/Jean-Laurent-Hamon.jpg" alt="img" draggable="false"></div>
+                                    <h2>M. HAMON</h2>
                                     <span>Maire Adjoint</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>-Conseiller Communautaire
-                                        <br>-Commission :
-                                        <br>-Économie; Tourisme; Commerce</h2>
-
+                                    <h2>Commission : <br>• Économie<br>• Tourisme<br>• Commerce</h2>
                                 </div>
                             </div>
                         </div>
@@ -268,39 +261,35 @@
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/inconuMan.jpeg" alt="img"
-                                                          draggable="false">
+                                    <div class="img">
+                                        <img src="image/personne/inconuMan.jpeg" alt="img" draggable="false">
                                     </div>
-                                    <h2>MR Inisan</h2>
-                                    <span>Conseiller municipal</span>
+                                    <h2>M. INISIAN</h2>
+                                    <span>Conseiller Municipal</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>
-                                        Commission :
-                                        <br>- Aménagement – Habitat – Mobilités - Mer et Littoral</h2>
-
+                                    <h2>Commission : <br>• Aménagement<br>• Habitat<br>• Mobilités<br>• Mer et Littoral</h2>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="container-3d">
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/inconnuwoman.png" alt="img"
-                                                          draggable="false">
+                                    <div class="img">
+                                        <img src="image/personne/inconnuwoman.png" alt="img" draggable="false">
                                     </div>
-                                    <h2>Mme Hérault</h2>
+                                    <h2>Mme HERAULT</h2>
                                     <span>Maire Adjointe</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>-Commission :
-                                        <br>- Culture ; Quartier de la manufacture</h2>
-
+                                    <h2>Commission : <br>• Culture<br>• Quartier de la<br> manufacture</h2>
                                 </div>
                             </div>
                         </div>
@@ -310,18 +299,16 @@
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/inconuMan.jpeg" alt="img"
-                                                          draggable="false">
+                                    <div class="img">
+                                        <img src="image/personne/inconuMan.jpeg" alt="img" draggable="false">
                                     </div>
-                                    <h2>Mr Ternay</h2>
+                                    <h2>Mme DE TERNAY</h2>
                                     <span>Maire Adjoint</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>Commission :
-                                        <br>- Cohésion sociale – Jeunesse – Liens inter-générationnels</h2>
-
+                                    <h2>Commission : <br>• Cohésion sociale<br>• Jeunesse<br>• Liens inter -<br>générationnels</h2>
                                 </div>
                             </div>
                         </div>
@@ -331,18 +318,16 @@
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/MmeMartineCARN.png" alt="img"
-                                                          draggable="false">
+                                    <div class="img">
+                                        <img src="image/personne/MmeMartineCARN.png" alt="img" draggable="false">
                                     </div>
-                                    <h2>Mme Carn</h2>
+                                    <h2>Mme CARN</h2>
                                     <span>Conseillerère</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
-                                    <h2>-Commission :
-                                        <br>- Transition écologique et énergétique</h2>
-
+                                    <h2>Commission : <br>• Transition écologique<br> et énergétique</h2>
                                 </div>
                             </div>
                         </div>
@@ -351,24 +336,20 @@
 
                     <div class="container-3d">
                         <li class="card">
-
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/inconuMan.jpeg" alt="img"
-                                                          draggable="false">
+                                    <div class="img">
+                                        <img src="image/personne/inconuMan.jpeg" alt="img" draggable="false">
                                     </div>
-                                    <h2>Mr Berthou</h2>
+                                    <h2>M. BERTHOU</h2>
                                     <span>Maire Adjoint</span>
-
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="back-content">
                                     <div class="int">
-                                        <h2>-Commission :
-                                            <br>- Eau - Biodiversité</h2>
+                                        <h2>Commission : <br>• Eau<br>• Biodiversité</h2>
                                     </div>
-
                                 </div>
                             </div>
                         </li>
